Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0 RC 1
-
None
-
88047bee4c8731be6adb8cb3be0e18280c9ebea2
Description
The fix implemented for QTBUG-27393 is incomplete. #include <QtGui/qpalette.h> must be added to qapplication.h
Attachments
Issue Links
- relates to
-
QTBUG-27393 QApplication::palette() does not use QT_NO_USING_KEYWORD
-
- Closed
-
For Gerrit Dashboard: QTBUG-28446 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
42620,1 | add missing include when Q_NO_USING_KEYWORD is defined | stable | qt/qtbase | Status: MERGED | +2 | 0 |