add missing include when Q_NO_USING_KEYWORD is defined

Task-number: QTBUG-28446
Change-Id: I348de023035a15f3c769610abdaf0ebd7273ca34
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>